# AI-in-medicine

./: .gitignore  README.md
CPP/CNN1/: CMakeLists.txt  FashionCNN.cpp  build.sh  display.py
Python/CNN1/: CNN1.py  README.txt  Suggestions.txt
Python/DNN1/: DNN128.py
